--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_bloc: ^8.1.6
   dio: ^5.5.0+1
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
